# ChangeLog for media-libs/yiff
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/yiff/ChangeLog,v 1.11 2006/10/25 19:08:09 tupone Exp $

  25 Oct 2006; <tupone@gentoo.org> yiff-2.14.5.ebuild:
  Fix emerging with USE="kde". Bug #146475 by Pacho Ramos

  02 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> yiff-2.14.5.ebuild:
  Allow kdemultimedia being a dependency as well as kmid. Thanks to Dave for
  reporting.

*yiff-2.14.5 (20 Oct 2005)

  20 Oct 2005; Mike Frysinger <vapier@gentoo.org>
  +files/yiff-2.14.5-build.patch, +yiff-2.14.5.ebuild:
  Version bump.

  08 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org> yiff-2.14.2.ebuild:
  multilib fixes

  12 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +files/yiff-2.14.2-PIC.patch:
  Added USE=alsa support.  Added PIC patch.  Added ~amd64.

  09 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> yiff-2.14.2.ebuild:
  Removing mikmod dependency stuff as it is borked... does not provide libkmid.h

  30 Jun 2004; David Holm <dholm@gentoo.org> yiff-2.14.2.ebuild:
  Added to ~ppc.

  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> yiff-2.14.2.ebuild:
  Fix use invocation

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> yiff-2.14.2.ebuild:
  Add inherit eutils

*yiff-2.14.2 (31 Jul 2003)

  31 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.