@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/yiff
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/yiff/ChangeLog,v 1.11 2006/10/25 19:08:09 tupone Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/yiff/ChangeLog,v 1.12 2007/03/16 17:28:32 armin76 Exp $
+
+  16 Mar 2007; Raúl Porcel <armin76@gentoo.org> yiff-2.14.5.ebuild:
+  x86 stable wrt bug 166143
 
   25 Oct 2006; <tupone@gentoo.org> yiff-2.14.5.ebuild:
   Fix emerging with USE="kde". Bug #146475 by Pacho Ramos
